# Probabilidad

./: .gitignore  Datos.csv  Parte1.py  ProgramaFinalProba4BM1.py  datos.csv  datos.txt  datos2.csv  datos2.txt  lib.py  main.py
Integrales numericas/: Archivo.txt  main.cpp
Integrales_numericas/: CMakeLists.txt  main.cpp  plot_graph.h
